After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767574 - Crash while clicking around
Crash while clicking around
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nm-applet
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
: 768655 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-06-12 19:10 UTC by Paul Menzel
Modified: 2016-07-15 08:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] applet: fix handling of changed icon theme signal (3.36 KB, patch)
2016-06-13 08:02 UTC, Beniamino Galvani
none Details | Review

Description Paul Menzel 2016-06-12 19:10:50 UTC
With Debian Sid/unstable and nm-applet 1.2.2-2, starting the applet in the window manager *awesome* and opening the menus with right and left clicking on the icon, the applet terminated with a segmentation fault.

```
nm-applet[2106]: segfault at 73206f80 ip b66dc878 sp bfca9db0 error 4 in libglib-2.0.so.0.
4800.1[b66a7000+127000]
```

Here is the stack trace from `coredumpctl info 2106`.

```
#0  0x00000000b66dc878 g_hash_table_remove_all (libglib-2.0.so.0)
#1  0x0000000008057183 n/a (nm-applet)
#2  0x00000000b67df7ec g_cclosure_marshal_VOID__VOID (libgobject-2.0.so.0)
#3  0x00000000b67ddb6b g_closure_invoke (libgobject-2.0.so.0)
#4  0x00000000b67efffc signal_emit_unlocked_R (libgobject-2.0.so.0)
#5  0x00000000b67f8c96 g_signal_emit_valist (libgobject-2.0.so.0)
#6  0x00000000b67f8fc5 g_signal_emit (libgobject-2.0.so.0)
#7  0x00000000b705e295 theme_changed_idle (libgtk-3.so.0)
#8  0x00000000b6db139c gdk_threads_dispatch (libgdk-3.so.0)
#9  0x00000000b66ea600 g_idle_dispatch (libglib-2.0.so.0)
#10 0x00000000b66edd8b g_main_dispatch (libglib-2.0.so.0)
#11 0x00000000b66ee179 g_main_context_iterate (libglib-2.0.so.0)
#12 0x00000000b66ee244 g_main_context_iteration (libglib-2.0.so.0)
#13 0x00000000b68d7f2b g_application_run (libgio-2.0.so.0)
#14 0x00000000080554bb main (nm-applet)
#15 0x00000000b64b1517 __libc_start_main (libc.so.6)
#16 0x00000000080555b5 _start (nm-applet)
```
Comment 1 Beniamino Galvani 2016-06-13 08:02:48 UTC
Created attachment 329667 [details] [review]
[PATCH] applet: fix handling of changed icon theme signal
Comment 2 Thomas Haller 2016-06-13 13:08:53 UTC
(In reply to Beniamino Galvani from comment #1)
> Created attachment 329667 [details] [review] [review]
> [PATCH] applet: fix handling of changed icon theme signal

LGTM.

Note there is also G_CONNECT_SWAPPED, but your solution is nicer.
Comment 3 Dan Williams 2016-06-15 21:44:58 UTC
LGTM
Comment 5 Jiri Klimes 2016-07-15 08:46:38 UTC
*** Bug 768655 has been marked as a duplicate of this bug. ***