applet: fix handling of changed icon theme signal

Handler's arguments were swapped. Since we also need to update the
current icon when the theme changes, introduce a dedicated handler.

Fixes: 40f052d38af9e9f3bc42c6cbbb51e9044ab73663

https://bugzilla.gnome.org/show_bug.cgi?id=767574